z-index changed to solve shadow bug over circles on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -18,10 +18,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  z-index: 1;
 }
 
 #particles-js {
-  z-index: -2;
   width: 100%;
   height: 100vh;
   position: fixed;
@@ -29,6 +29,7 @@
   margin: 0;
   top: 0;
   left: 0;
+  z-index: -2;
 }
 
 .CircleContainer, .ControlPanel {
