--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,9 @@ body, html {
   margin: 0;
   padding: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   overflow: auto;
-  z-index: 0;
+  z-index: -1;
   position: relative;
   background: rgba(15, 15, 15, 0.7);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
